<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.NoteActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/shape_bg"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/TitleText"
            app:contentScrim="@android:color/transparent"
            app:expandedTitleTextAppearance="@style/HideText"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:titleEnabled="true"
            app:toolbarId="@id/toolbar">


            <EditText
                android:id="@+id/toolbarEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="25dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/montserrat"
                android:hint="@string/note_activity_untitled"
                android:inputType="textShortMessage"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/shape_bg"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:titleTextColor="@color/white" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <jp.wasabeef.richeditor.RichEditor
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>

    <ir.amirsobhan.sticknote.ui.views.TextStyleBar
        android:id="@+id/textStyleBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>